--- a/prog2_11_ipynb.ipynb
+++ b/prog2_11_ipynb.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/iseki00000/Prog2_11th/blob/main/prog2_11_ipynb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/2220070/Prog2_11th/blob/main/prog2_11_ipynb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -2208,19 +2208,32 @@
         "第90問\n",
         "次の問題に答えなさい\n",
         "\n",
-        "(ここから以降に自作問題を書いてください)"
+        "アイウエオと表示しなさい"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1xLoA-bECpfn"
+        "id": "1xLoA-bECpfn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "91434ab0-28a8-4b01-bc0a-feff4f062abf"
       },
       "source": [
-        "# ここに自作問題の回答（pythonプログラム）を書いてください"
+        "# ここに自作問題の回答（pythonプログラム）を書いてください\n",
+        "print('アイウエオ')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "アイウエオ\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
